added splash text

--- a/about.html
+++ b/about.html
@@ -6,18 +6,42 @@
     </head>
     <body>
         <header><h1>The Dodo Bird</h1></header>
-        <h1 class="splash-text">Who We Are</h1>
+        <h1 class="splash-heading">Why this is important...</h1>
+        <img
+            class="splash-img"
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.ctfassets.net%2Fcnu0m8re1exe%2F6sNqiFXX253nMZjuX2em3I%2Fe0a9b5c7e9a758cc6bc65e3f2e11dcb3%2Fshutterstock_1301615152.jpg&f=1&nofb=1&ipt=1a82ba32b104e9c084731e3cd49c6b6b180f549001ce921e0342f07745a5ebbd"
+            alt="Image of a Dodo Bird"
+        />
+        <p class="splash-text">
+            A webpage focusing on extinct animals may seem rather strange, but
+            can be important for understanding the importance of a well balanced
+            ecosystem. This site is dedicated to exploring the legacy of the
+            dodo bird, one of history’s most iconic extinct animals. The dodo's
+            story is a powerful reminder of how human impact can alter the
+            course of nature. By studying a species who went extinct nearly 400
+            years ago, we gain important insight into the fragile balance of the
+            ecosystem, and learn how we can preserve endangered animals today.
+            Understanding extinction helps us to prevent it from repeating. Join
+            us in honoring the past to safeguard the future.
+        </p>
+
+        <h1 class="team-splash-text">Meet the Team!</h1>
         <main>
             <div class="card">
                 <img
+                    class="profile-img"
                     src="https://avatars.githubusercontent.com/u/103609653?v=4"
                     alt="Image of Charly"
                 />
                 <h2>Charly Rivera</h2>
-                <p></p>
+                <p>
+                    The Dodo bird's extinction is a reminder that discovery
+                    without responsibility can lead to destruction.
+                </p>
             </div>
             <div class="card">
                 <img
+                    class="profile-img"
                     src="https://avatars.githubusercontent.com/u/128549369?v=4"
                     alt="Image of Bilal"
                 />
@@ -26,6 +50,7 @@
             </div>
             <div class="card">
                 <img
+                    class="profile-img"
                     src="https://avatars.githubusercontent.com/u/114158751?v=4"
                     alt="Image of Smedly"
                 />
@@ -34,13 +59,21 @@
             </div>
             <div class="card">
                 <img
+                    class="profile-img"
                     src="https://avatars.githubusercontent.com/u/99229037?v=4"
                     alt="Image of Emmanuel"
                 />
                 <h2>Emmanuel Ruiz</h2>
-                <p></p>
+                <p>
+                    I always thought of the Dodo Bird as a bit of a joke growing
+                    up. Getting to learn more about it allows me to see it in a
+                    new light!
+                </p>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <p>Created by Charles, Bilala, Emmanuel, and Smedly</p>
+            <p>&copy; 2025 All rights reserved.</p>
+        </footer>
     </body>
 </html>
