added descriptors to profile

--- a/about-page.html
+++ b/about-page.html
@@ -46,7 +46,12 @@
                     alt="Image of Bilal"
                 />
                 <h2>Bilal Burton</h2>
-                <p></p>
+                <p>
+                    As a digital artist, I’m drawn to stories, and the dodo is
+                    one of the most interesting. I put together our info page by
+                    researching its history and curating images to help others
+                    learn its story in a clear, engaging way.
+                </p>
             </div>
             <div class="card">
                 <img
@@ -55,7 +60,12 @@
                     alt="Image of Smedly"
                 />
                 <h2>Smedly Moise</h2>
-                <p></p>
+                <p>
+                    I got involved because I wanted to make learning about the
+                    dodo fun. Along the way, I discovered all kinds of cool
+                    facts, like how Kevin from "Up" was a dodo, and I never
+                    knew!
+                </p>
             </div>
             <div class="card">
                 <img
