Final project version

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Dodo Bird Project</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
     <body>
-        <header></header>
-        <main></main>
-        <footer></footer>
+        <header>
+            <h1>The Dodo Bird: The Price of Discovery</h1>
+        </header>
+
+        <main>
+            <ul>
+                <li><a href="history.html">History</a></li>
+                <li><a href="about-page.html">About Us</a></li>
+                <li><a href="fun-fact.html">Fun Facts</a></li>
+
+            </ul>
+            <img src="images/dodo.jpg" alt="Dodo bird painting">
+            <p>The dodo was a flightless bird from Mauritius that went extinct in the 1600s after humans arrived on the island</p>
+        </main>
+
+        <footer>
+            <p>Created by Charles, Bilala, Emmanuel, and Smedly</p>
+            <p>&copy; 2025 All rights reserved.</p>
+        </footer>
     </body>
 </html>
