--- a/about-page.html
+++ b/about-page.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About Us</title>
-        <link rel="stylesheet" href="about.css" />
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
         <header><h1>The Dodo Bird</h1></header>
@@ -42,15 +42,12 @@
             <div class="card">
                 <img
                     class="profile-img"
-                    src="https://avatars.githubusercontent.com/u/128549369?v=4"
+                    src="images/bilala.png"
                     alt="Image of Bilal"
                 />
                 <h2>Bilal Burton</h2>
                 <p>
-                    As a digital artist, I’m drawn to stories, and the dodo is
-                    one of the most interesting. I put together our info page by
-                    researching its history and curating images to help others
-                    learn its story in a clear, engaging way.
+                    As a digital artist, the dodo’s story captivates me.
                 </p>
             </div>
             <div class="card">
