added navigation links to pages

--- a/fun-fact.html
+++ b/fun-fact.html
@@ -10,7 +10,11 @@
     <header>
         <h1>Fun Facts about Dodo birds</h1>
     </header>
-
+    <ul>
+        <li><a href="history.html">History</a></li>
+        <li><a href="about-page.html">About Us</a></li>
+        <li><a href="fun-fact.html">Fun Facts</a></li>
+    </ul>
     <div class="fact">
         <img src="images/dodo2.png" alt="Dodo Illustration">
         <p><strong>Did you know Kevin from the movie UP was a dodo bird??</strong> <br> Now you do</p>
