--- a/history.html
+++ b/history.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/styles.css">
         <style>
-        table { 
-            width: 100%; 
+        table {
+            width: 100%;
             font-style: italic;
         }
         #header {
@@ -42,19 +43,24 @@
     </head>
     <body>
         <header id="header">Information on Dodo Birds</header>
+        <ul>
+            <li><a href="history.html">History</a></li>
+            <li><a href="about-page.html">About Us</a></li>
+            <li><a href="fun-fact.html">Fun Facts</a></li>
+        </ul>
            <table>
         <tr>
             <tr id="image-row"><!--Aligns the page properly-->
-            
+
             </tr>
             <td id="section">
                 <h1>A brief history on dodo Birds </h1>
-                <p>The dodo (Raphus cucullatus) was a flightless bird that lived on the island of Mauritius in the Indian Ocean. 
+                <p>The dodo (Raphus cucullatus) was a flightless bird that lived on the island of Mauritius in the Indian Ocean.
                     It is believed to have gone extinct in the late 1600s, just a few decades after it was first discovered by Dutch sailors around 1598.
                     </p>
                 <p>
-                    Dodos evolved without natural predators and lost their ability to fly over time. 
-                    When humans arrived, they brought invasive species like rats, pigs, and monkeys, which ate dodo eggs. 
+                    Dodos evolved without natural predators and lost their ability to fly over time.
+                    When humans arrived, they brought invasive species like rats, pigs, and monkeys, which ate dodo eggs.
                     Additionally, humans hunted dodos for food. The combination of hunting and introduced animals led to the bird's rapid extinction by around 1681.
                 </p>
                 <p>
@@ -66,7 +72,7 @@
                 <img src="images/dodo8.png" alt="Dodo Image" width=45%>
             </td>
         </tr>
-    </table> 
+    </table>
         <footer>© 2025 Bilal Burton. All rights reserved.</footer>
     </body>
 </html>
