--- a/about-page.html
+++ b/about-page.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <header><h1>The Dodo Bird</h1></header>
+        <ul>
+            <li><a href="history.html">History</a></li>
+            <li><a href="about-page.html">About Us</a></li>
+            <li><a href="fun-fact.html">Fun Facts</a></li>
+        </ul>
         <h1 class="splash-heading">Why this is important...</h1>
         <img
             class="splash-img"
@@ -46,9 +51,7 @@
                     alt="Image of Bilal"
                 />
                 <h2>Bilal Burton</h2>
-                <p>
-                    As a digital artist, the dodo’s story captivates me.
-                </p>
+                <p>As a digital artist, the dodo’s story captivates me.</p>
             </div>
             <div class="card">
                 <img
